<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/timePairTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/roboto"
            android:text="@string/time"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/typePairTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/roboto_thin"
            android:text="@string/typePair"
            android:textColor="@color/colorPrimary"
            app:layout_constraintStart_toEndOf="@+id/timePairTV"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/pairNameTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/roboto_light"
            android:maxWidth="300dp"
            android:text="@string/lectureName"
            android:textAlignment="viewStart"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timePairTV" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/teacherTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/roboto_thin"
            android:text="@string/teacher"
            android:textColor="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pairNameTV" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/lectureHallTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/roboto_thin"
            android:text="@string/lectureHall"
            android:textColor="@color/colorPrimary"
            app:layout_constraintStart_toEndOf="@+id/teacherTV"
            app:layout_constraintTop_toBottomOf="@+id/pairNameTV" />

        <ImageView
            android:id="@+id/imageView16"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lectureHallTV"
            app:srcCompat="@color/colorPrimaryDark" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>