<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginTop="62dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@color/colorWhite"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/roboto_light"
        android:gravity="center"
        android:maxWidth="116dp"
        android:text="@string/nameDiscipline"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="@+id/imageView9"
        app:layout_constraintEnd_toEndOf="@+id/imageView9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/roboto_light"
        android:gravity="center"
        android:text="@string/Semestr"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="@+id/imageView19"
        app:layout_constraintEnd_toStartOf="@+id/imageView10"
        app:layout_constraintStart_toEndOf="@+id/imageView19"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/roboto_light"
        android:gravity="center"
        android:text="@string/grade"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="@+id/imageView9"
        app:layout_constraintEnd_toStartOf="@+id/imageView19"
        app:layout_constraintStart_toEndOf="@+id/imageView9"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/roboto_light"
        android:gravity="center"
        android:maxWidth="64dp"
        android:text="@string/TypeExams"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toTopOf="@+id/lv_passed_exams"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView10"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="2dp"
        android:layout_height="0dp"
        android:layout_marginStart="130dp"
        app:layout_constraintBottom_toTopOf="@+id/lv_passed_exams"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@color/colorWhite" />

    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="2dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/lv_passed_exams"
        app:layout_constraintEnd_toStartOf="@+id/imageView10"
        app:layout_constraintStart_toEndOf="@+id/imageView9"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@color/colorWhite"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="2dp"
        android:layout_height="0dp"
        android:layout_marginEnd="80dp"
        app:layout_constraintBottom_toTopOf="@+id/lv_passed_exams"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@color/colorWhite" />

    <ListView
        android:id="@+id/lv_passed_exams"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.571" >

    </ListView>
</androidx.constraintlayout.widget.ConstraintLayout>