<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".API.Login">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageLogo"
        android:layout_width="188dp"
        android:layout_height="188dp"
        android:layout_marginStart="98dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="98dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_vlgu" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/logButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:onClick="onButtonClick"
        android:text="Войти"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
        android:theme="@style/LoginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passField" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/roboto_light"
        android:hint="@string/login_logscreen"
        android:textColorHint="@color/colorPrimary"
        app:boxBackgroundColor="@color/colorWhite"
        app:hintTextColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="@+id/passField"
        app:layout_constraintStart_toStartOf="@+id/passField"
        app:layout_constraintTop_toBottomOf="@+id/imageLogo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_light"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHighlight="@color/blueA100"
            android:textColorHint="@color/blue500" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView2"
        style="@style/LinkText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/roboto_italic"
        android:text="@string/problem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logButton" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_marginTop="16dp"
        android:hint="@string/password"
        android:textColorHint="@color/colorPrimary"
        app:boxBackgroundColor="@color/colorWhite"
        app:errorEnabled="true"
        app:hintTextColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="@+id/logButton"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="@+id/logButton"
        app:layout_constraintTop_toBottomOf="@+id/loginField"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorPrimary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_light"
            android:inputType="textPassword"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHighlight="@color/blueA100"
            android:textColorHint="@color/blue500" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/fingerprint"
        android:layout_width="42dp"
        android:layout_height="40dp"

        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/arrowDown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_fingerprint" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/arrowDown"
        android:layout_width="30dp"
        android:layout_height="31dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_menu_down" />

</androidx.constraintlayout.widget.ConstraintLayout>